@startuml
package src{
    package model{
        class Box{
            -numero_ruedas : int
            -ruedas : List<Rueda>
            +Box()
            +girarRueda()
            +getRuedas() : List<Rueda>
            +getRuedasValues() : List<character>
        }

        class Rueda{
            -random : int
            -max_values : int
            -valor : int
            +Rueda()
            +girarAlAzar()
            +getValor() : int
            +getChar() : char
        }
    }

    package services{
        class Tragamonedas{
            +RealizarApuesta(int apuesta) : int
            +getRuedasValues() : List<character>
            +getSaldo() : int
        }

        class TragamonedasImpl{
        -Box : box
        -Saldo : int
        +TragamonedasImpl(int saldo)
        +realizarApuesta(int apuesta) : int
        +getRuedasValues() : List<character>
        +getSaldo() : int
        -getPremio(int apuesta) : int
        -isValorRuedasIgualDistintoDeCero() : Boolean
        }
    }

    class TheMain{
    +main(String[]args)
    }
}

Box *-- "3" Rueda
Box --* TragamonedasImpl
TragamonedasImpl ..|> Tragamonedas
TragamonedasImpl <-- TheMain
@enduml
